@@ -4,7 +4,7 @@
 // Modified by Garth N. Wells 2005.
 //
 // First added:  2004
-// Last changed: 2005-09-09
+// Last changed: 2005-11-01
 
 #include <dolfin/dolfin_math.h>
 #include <dolfin/dolfin_log.h>
@@ -293,12 +293,23 @@ real Vector::norm(NormType type) const
   return value;
 }
 //-----------------------------------------------------------------------------
+real Vector::sum() const
+{
+  dolfin_assert(x);
+
+  real value = 0.0;
+  
+  VecSum(x, &value);
+  
+  return value;
+}
+//-----------------------------------------------------------------------------
 real Vector::max() const
 {
   dolfin_assert(x);
 
-  int  position = 0;
-  real value    = 0.0;
+  int position = 0;
+  real value = 0.0;
   
   VecMax(x, &position, &value);
 
